Fixed alignments.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1717,6 +1717,9 @@ footer {
 
   .button {
     background: $pblue-light;
+    height: 2.5rem;
+    display: flex;
+    flex-direction: row;
     color: $pblue;
     & > * {
       align-self: center;
@@ -1731,10 +1734,18 @@ footer {
   a {
     color: inherit;
     text-decoration: none;
-    display: flex;
     flex-direction: row;
+    padding-bottom: 1rem;
+    display: flex;
     & > * {
       align-self: center;
+    }
+  }
+
+  .link {
+    a {
+      display: inline !important;
+      padding-bottom: 0;
     }
   }
 }
